# cmcp

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
examples/: config.toml  test_config.toml
src/: catalog.rs  client.rs  config.rs  import.rs  lib.rs  main.rs  sandbox.rs  server.rs  transpile.rs
