[package]
name = "code-mode-mcp"
version = "0.1.0"
edition = "2024"
description = "A code-mode MCP proxy that aggregates multiple MCP servers behind search() + execute()"
license = "MIT"

[[bin]]
name = "cmcp"
path = "src/main.rs"

[dependencies]
# MCP SDK - official Rust implementation
rmcp = { version = "0.16", features = [
    "client",
    "server",
    "macros",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }

# JS sandbox
rquickjs = { version = "0.11", features = ["full-async", "parallel"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JSON Schema generation (for rmcp tool parameters)
schemars = "1"

# Async utilities
futures = "0.3"
